fixed overlap animation

--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -377,6 +377,6 @@
   background-color: $c-dark;
 
   &.overlap-active {
-    transition: height 5000ms;
+    transition: height 500ms;
   }
 }
